fixed some layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,8 +153,8 @@ body {
 }
 
 #content-pane {
-    margin-top: 2px;
-    margin-left: 20%;
+    margin-top: 15px;
+    margin-left: 21%;
 }
 
 .dvs-tab {
